---
= 新功能
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
瞭解 BlueXP 中 Cloud Volumes ONTAP 管理的新功能。

本頁所述的增強功能僅適用於支援Cloud Volumes ONTAP 支援管理功能的BlueXP功能。若要瞭解Cloud Volumes ONTAP 有關此功能的最新消息、請參閱 https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/index.html["前往Cloud Volumes ONTAP 《發行說明》"^]



== 2024 年 3 月 5 日



=== Cloud Volumes ONTAP 9.14.1 GA

BlueXP 現在可以在 AWS 、 Azure 和 Google Cloud 中部署和管理 Cloud Volumes ONTAP 9.14.1 通用可用度版本。



== 2024 年 2 月 2 日



=== 支援 Azure 中的 Edv5 系列 VM

Cloud Volumes ONTAP 現在支援從 9.14.1 版開始的下列 Edv5 系列 VM 。

* E4ds_v5
* E8ds_v5
* E20s_v5
* E32ds_v5
* E48ds_v5
* E64ds_v5


link:https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/reference-configs-azure.html["Azure支援的組態"^]



== 2024 年 1 月 16 日



=== BlueXP 中的修補程式版本

BlueXP 中只有最新三個版本的 Cloud Volumes ONTAP 才提供修補程式版本。

link:https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/task-updating-ontap-cloud.html#patch-releases["升級Cloud Volumes ONTAP"^]



== 2024 年 1 月 8 日



=== Azure 多個可用區域的新 VM

從 Cloud Volumes ONTAP 9.13.1 開始、下列 VM 類型支援 Azure 多個可用性區域、以進行新的和現有的高可用度配對部署：

* L16s_v3
* L32s_v3
* L48s_v3
* L64s_v3


link:https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/reference-configs-azure.html["Azure支援的組態"^]



== 2023 年 12 月 6 日



=== Cloud Volumes ONTAP 9.14.1 RC1

BlueXP 現在可以在 AWS 、 Azure 和 Google Cloud 中部署和管理 Cloud Volumes ONTAP 9.14.1 。



=== 300 TiB FlexVol Volume 上限

現在、您可以使用系統管理員和 ONTAP CLI 、從 Cloud Volumes ONTAP 9.12.1 P2 和 9.13.0 P2 開始、在 BlueXP 中從 Cloud Volumes ONTAP 9.13.1 開始、建立最大至 300 TiB 的 FlexVol Volume 。

* link:https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/reference-limits-aws.html#file-and-volume-limits["AWS的儲存限制"]
* link:https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/reference-limits-azure.html#file-and-volume-limits["Azure的儲存限制"]
* link:https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/reference-limits-gcp.html#logical-storage-limits["Google Cloud的儲存限制"]



